# prosze-nakarm-kot

./: README.md  RPReplay_Final1696148225.mov
corelib/: .gitignore  Cargo.toml  README.md  conf
corelib/src/: acdc_authorization.rs  api.rs  house_state.rs  keri_authentication.rs  keri_authorization.rs  lib.rs  listener.rs  main.rs  request_credential.rs
frontend/: .eslintrc.js  README.md  package.json  quasar.conf.js
frontend/src/components/: EssentialLink.vue  HomeStateComponent.vue  models.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: About.vue  Dashboard.vue  Index.vue  Onboarding.vue
frontend/src/router/: routes.ts
mobile/: .metadata  pubspec.yaml
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/lib/: injector.dart  main.dart
mobile/lib/config/: app_routes.dart
mobile/lib/data/datasources/: database_service.dart
mobile/lib/data/repositories/: app_repository_impl.dart
mobile/lib/domain/entities/: acdc_db.dart  request.dart
mobile/lib/domain/repositories/: app_repository.dart
mobile/lib/domain/usecases/: ask_issuer_for_credential_usecase.dart  get_request_list_usecase.dart  match_schema_usecase.dart  post_acdc_to_authorize_usecase.dart  render_form_from_request_usecase.dart  respond_to_request_usecase.dart  save_acdc_usecase.dart  submit_form_usecase.dart
mobile/lib/presentation/views/: authorized_view.dart  form_submitted_view.dart  main_app_view.dart  render_request_view.dart  request_list_view.dart  request_sent_view.dart  scan_to_authorize_view.dart  scan_to_request_view.dart
(+27 files in other folders)
